# Master-Thesis-3D-VLA

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  nano-banana.skill  pixi.toml  pyproject.toml  start_claude.sh  start_gpu_session.sh  sync_outputs.sh
.claude/: settings.json
.claude/agents/: ralph.md  tdd-executor.md
.claude/hooks/: auto-format.sh  block-dangerous-git.sh
.claude/skills/prd-to-issues/: SKILL.md
.claude/skills/qa-review/: SKILL.md
.claude/skills/ralph-loop/: SKILL.md
.claude/skills/slurm-submit/: SKILL.md
.claude/skills/tdd/: SKILL.md
.github/ISSUE_TEMPLATE/: prd.yml  task.yml
.github/workflows/: claude-code-review.yml  claude.yml  dev-env.yml  dev-uv.yml  pixi-install.yml  ralph.yml  test-bwunicluster.yml  train-baseline.yml
archiv/alfred_env/: data_utils.py
configs/: dreamer_objectnav.yaml
docs/: claude-code-setup.md  dreamerv3-evaluation-plan.md  index.html  ralph-handbook.md  slurm-ci-pipeline.md
docs/notes/: 2026-03-03-meeting.md
docs/specs/: action-heads-spec.md  dataset-prerequisites-spec.md  dreamer-jax-baseline-spec.md  dreamerv3-objectnav-baseline.md
media/images/: vggt_arch.tex
modules/dreamerv3/: agent.py  configs.py  eval.py  networks.py  optim.py  train.py
modules/envs/: crafter.py  habitat.py  habitat_r2dreamer.py
modules/r2dreamer/: agent.py  networks.py
modules/shared/: wandb_utils.py
modules/vggt/: benchmark.py  variants.py
nano-banana/: SKILL.md
nano-banana/scripts/: generate_image.py
notebooks/: action_heads_exploration.ipynb  alfred_exploration.ipynb  dreamerv3_hm3d_analysis.ipynb  dreamerv3_jax_vs_pytorch.ipynb  dreamerv3_jax_vs_pytorch_paper.ipynb  dreamerv3_official_comparison.ipynb  dreamerv3_smoke_test.ipynb  habitat_headless_test.ipynb  habitat_objectnav_benchmark.ipynb  vggt_comparison.ipynb  vggt_exploration.ipynb
scripts/: collect_expert_demos.py  collect_random_obs.py  download_alfred.sh  habitat_env_r2dreamer.py  run_habitat_timing.py  run_official_crafter.py  run_ours_crafter.py  run_r2dreamer_jax_crafter.py  run_r2dreamer_pytorch_crafter.py  run_ralph.sh  run_ralph_spec.sh  setup_external.sh  setup_uv_env.sh  smoke_test.py  smoke_test_pipeline.sh  train_baseline.sh  validate_smoke_wandb.py
scripts/slurm/: smoke_obs.sbatch  train.sbatch  train_dreamer_easy.sbatch
src/action_heads/: __init__.py  common.py  conditioning.py  ddpm_policy.py  discrete_head.py  flow_matching_policy.py  noise_schedules.py
src/alfred_env/: __init__.py  constants.py
src/dreamer/: __init__.py  agent.py  config.py  envs.py  networks.py  replay_buffer.py  train.py
src/dreamerv3/: __init__.py  agent.py  configs.py  env_habitat.py  eval.py  networks.py  r2dreamer_agent.py  r2dreamer_config.py  r2dreamer_networks.py  replay_buffer.py  train.py
src/vggt_comparison/: __init__.py  plots.py
tests/: test_action_heads.py  test_ai2thor_smoke.py  test_alfred_data.py  test_dreamer.py  test_dreamerv3_integration.py  test_dreamerv3_shapes.py  test_habitat_env.py  test_r2dreamer_agent.py  test_r2dreamer_optim.py  test_r2dreamer_shapes.py  test_vggt_comparison.py
visualizations/: vggt_arch.py  vggt_manim.py  vggt_shapes.py
(+32 files in other folders)
