[project]
name = "master-thesis-3d-vla"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # VGGT deps
    "torch>=2.7",
    "torchvision>=0.22",
    "numpy>=1.26",
    "Pillow",
    "huggingface_hub",
    "einops",
    "safetensors",
    # Habitat — see [project.optional-dependencies] habitat extra
    # Install with: uv sync --extra habitat
    # notebook
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    # ALFRED / AI2-THOR
    "ai2thor>=5.0.0",
    # data
    "h5py",
    "tqdm",
    # tracking
    "wandb",
    # DreamerV3 / JAX
    "jax[cuda12]>=0.4.30",
    "flax>=0.10",
    "optax>=0.2",
    "ruamel.yaml",
    "gym>=0.22",
    "tensorboard",
    # Habitat
    "habitat-sim @ git+https://github.com/facebookresearch/habitat-sim.git@main",
    "habitat-lab @ git+https://github.com/facebookresearch/habitat-lab.git@main#subdirectory=habitat-lab",
    # dev
    "pytest",
    "pandas>=2.3.3",
    "transformers>=5.3.0",
    "pyvista>=0.47.1",
    "open3d>=0.19.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
python-preference = "only-managed"
override-dependencies = [
    "numpy>=2.0",
]
